--- a/css/rep_070.css
+++ b/css/rep_070.css
@@ -126,8 +126,10 @@
     max-height:50px;
 }*/
 
+/*!!!*/
 .k-grid td {
-    white-space: pre-wrap;
+    /*white-space: pre-wrap;*/
+    white-space: normal;
     text-overflow: ellipsis;
 }
 
