--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+/*table {
+    border-spacing: 2px;
+    background-color: white;
+}*/
+
 /*Ещё стили для разворачивающихся древовидных списков -->*/
 .tree{
     /*	font-family: Verdana, Arial, Helvetica, sans-serif;*/
@@ -96,3 +101,57 @@ li input:checked + ol > li:last-child {
 
 
 /*<---Ещё стили для разворачивающихся древовидных списков*/
+
+/*!!!Стили для DnD элементов--->*/
+.sclad_item {
+    font-size: 11px;
+}
+.sclad_item .cellName{
+
+}
+.sclad_item .cellName, .sclad_item .cellCosmAct, .sclad_item .cellFullName{
+    padding: 0 4px;
+    outline: 1px solid #BFBCB5;
+    border: 0;
+    margin: 2px;
+}
+
+.sclad_item_tr td{
+    border-bottom: 1px solid #CCC;
+    border-right: 1px solid #CCC;
+    /*vertical-align: top;*/
+    padding: 2px 5px 1px 2px;
+    /*font-size: 88%;*/
+    text-align: left;
+    overflow: hidden;
+}
+
+/*Для переноса DnD*/
+.dnd_class {
+    background-color: rgba(243, 243, 243, 0.5);
+    box-shadow: -1px 4px 17px 3px rgb(160, 164, 165);
+}
+
+.draggable:hover {
+    cursor: pointer;
+    /*font-weight: bold;*/
+    background-color: rgba(201, 243, 227, 0.9);
+    /*box-shadow: -1px 4px 17px 3px rgb(160, 164, 165);*/
+    border: 1px solid #CCC;
+}
+
+.context_pick {
+    background-color: rgba(201, 243, 227, 0.9);
+}
+
+/*Стиль для склада, выделение при переносе dnd*/
+.uponMe {
+    color: red;
+    font-weight: bold;
+    cursor: pointer;
+    /*box-shadow: -1px 4px 17px 3px rgb(165, 28, 52);*/
+    /*border-bottom: 1px solid rgba(233, 18, 8, 0.4);*/
+    background-color: rgb(173 255 47);
+}
+
+/*<---Стили для DnD элементов*/
