--- a/css/style.css
+++ b/css/style.css
@@ -200,121 +200,217 @@ li input:checked + ol > li:last-child {
 
 /*Для теста контекстного меню --->*/
 .container {
-left: 0;
-margin: auto;
-position: absolute;
-top: 20%;
-width: 100%;
-text-align: center;
+    left: 0;
+    margin: auto;
+    position: absolute;
+    top: 20%;
+    width: 100%;
+    text-align: center;
 }
 .menu {
-position: absolute;
-width: 200px;
-padding: 2px;
-margin: 0;
-border: 1px solid #bbb;
-background: #eee;
-background: -webkit-linear-gradient(to bottom, #fff 0%, #e5e5e5 100px, #e5e5e5 100%);
-background: linear-gradient(to bottom, #fff 0%, #e5e5e5 100px, #e5e5e5 100%);
-z-index: 100;
-border-radius: 3px;
-box-shadow: 1px 1px 4px rgba(0,0,0,.2);
-opacity: 0;
--webkit-transform: translate(0, 15px) scale(.95);
-transform: translate(0, 15px) scale(.95);
-transition: transform 0.1s ease-out, opacity 0.1s ease-out;
-pointer-events: none;
+    position: absolute;
+    width: 200px;
+    padding: 2px;
+    margin: 0;
+    border: 1px solid #bbb;
+    background: #eee;
+    background: -webkit-linear-gradient(to bottom, #fff 0%, #e5e5e5 100px, #e5e5e5 100%);
+    background: linear-gradient(to bottom, #fff 0%, #e5e5e5 100px, #e5e5e5 100%);
+    z-index: 100;
+    border-radius: 3px;
+    box-shadow: 1px 1px 4px rgba(0,0,0,.2);
+    opacity: 0;
+    -webkit-transform: translate(0, 15px) scale(.95);
+    transform: translate(0, 15px) scale(.95);
+    transition: transform 0.1s ease-out, opacity 0.1s ease-out;
+    pointer-events: none;
 }
 .menu-item {
-display: block;
-position: relative;
-margin: 0;
-padding: 0;
-white-space: nowrap;
+    display: block;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    white-space: nowrap;
 }
 .menu-btn {
-background: none;
-line-height: normal;
-overflow: visible;
--webkit-user-select: none;
--moz-user-select: none;
--ms-user-select: none;
-display: block;
-width: 100%;
-color: #444;
-font-family: 'Roboto', sans-serif;
-font-size: 13px;
-text-align: left;
-cursor: pointer;
-border: 1px solid transparent;
-white-space: nowrap;
-padding: 6px 8px;
-border-radius: 3px;
+    background: none;
+    line-height: normal;
+    overflow: visible;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    display: block;
+    width: 100%;
+    color: #444;
+    font-family: 'Roboto', sans-serif;
+    font-size: 13px;
+    text-align: left;
+    cursor: pointer;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    padding: 6px 8px;
+    border-radius: 3px;
 }
 .menu-btn::-moz-focus-inner,
 .menu-btn::-moz-focus-inner {
-border: 0;
-padding: 0;
+    border: 0;
+    padding: 0;
 }
 .menu-text {
-margin-left: 25px;
+    margin-left: 25px;
 }
 .menu-btn .fa {
-position: absolute;
-left: 8px;
-top: 50%;
--webkit-transform: translateY(-50%);
-transform: translateY(-50%);
+    position: absolute;
+    left: 8px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 .menu-item:hover > .menu-btn {
-color: #fff;
-outline: none;
-background-color: #2E3940;
-background: -webkit-linear-gradient(to bottom, #5D6D79, #2E3940);
-background: linear-gradient(to bottom, #5D6D79, #2E3940);
-border: 1px solid #2E3940;
+    color: #fff;
+    outline: none;
+    background-color: #2E3940;
+    background: -webkit-linear-gradient(to bottom, #5D6D79, #2E3940);
+    background: linear-gradient(to bottom, #5D6D79, #2E3940);
+    border: 1px solid #2E3940;
 }
 .menu-item.disabled {
-opacity: .5;
-pointer-events: none;
+    opacity: .5;
+    pointer-events: none;
 }
 .menu-item.disabled .menu-btn {
-cursor: default;
+    cursor: default;
 }
 .menu-separator {
-display:block;
-margin: 7px 5px;
-height:1px;
-border-bottom: 1px solid #fff;
-background-color: #aaa;
+    display:block;
+    margin: 7px 5px;
+    height:1px;
+    border-bottom: 1px solid #fff;
+    background-color: #aaa;
 }
 .menu-item.submenu::after {
-content: "";
-position: absolute;
-right: 6px;
-top: 50%;
--webkit-transform: translateY(-50%);
-transform: translateY(-50%);
-border: 5px solid transparent;
-border-left-color: #808080;
+    content: "";
+    position: absolute;
+    right: 6px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    border: 5px solid transparent;
+    border-left-color: #808080;
 }
 .menu-item.submenu:hover::after {
-border-left-color: #fff;
+    border-left-color: #fff;
 }
 .menu .menu {
-top: 4px;
-left: 99%;
+    top: 4px;
+    left: 99%;
 }
 .show-menu,
 .menu-item:hover > .menu {
-opacity: 1;
--webkit-transform: translate(0, 0) scale(1);
-transform: translate(0, 0) scale(1);
-pointer-events: auto;
+    opacity: 1;
+    -webkit-transform: translate(0, 0) scale(1);
+    transform: translate(0, 0) scale(1);
+    pointer-events: auto;
 }
 .menu-item:hover > .menu {
--webkit-transition-delay: 100ms;
-transition-delay: 300ms;
+    -webkit-transition-delay: 100ms;
+    transition-delay: 300ms;
 }
 
 /*<--- Для теста контекстного меню*/
+
+.k-grid tr:hover{
+    background-color:#b5bdcb;
+    /*background-image:url(textures/highlight.png);*/
+    background-image:none,linear-gradient(to bottom,rgba(255,255,255,.2) 0,rgba(255,255,255,0) 100%);
+    background-position:50% 50%
+}
+li.k-item:hover{
+    background-color:#b5bdcb;
+    /*background-image:url(textures/highlight.png);*/
+    background-image:none,linear-gradient(to bottom,rgba(255,255,255,.2) 0,rgba(255,255,255,0) 100%);
+    background-position:50% 50%
+}
+
+/*Строки таблицы разным цветом --->*/
+tbody tr:nth-child(odd) {
+    background-color: #FFF;/* фон нечетных строк */
+}
+tbody tr:nth-child(even) {
+    background-color: rgb(243 243 244);/* фон четных строк */
+}
+/*<--- Строки таблицы разным цветом*/
+
+
+.ui-dialog {
+    top: 0;
+    left: 0;
+    padding: .2em;
+    border: 1px;
+    border-radius: 0;
+}
+
+.ui-dialog .ui-dialog-titlebar {
+    border:1px;
+    /*display: none;*/
+    border-radius: 0;
+}
+
+.ui-dialog .ui-dialog-content {
+    border: 0;
+    padding: 20px;
+    font-size:18px;
+    color:#CAAD75;
+    background-color: #FDF8E4;
+    overflow: auto;
+}
+
+.ui-dialog .ui-dialog-buttonpane {
+    text-align: left;
+    border-width: 1px 0 0 0;
+    background-image: none;
+    margin-top: .5em;
+    padding: .3em 1em .5em .4em;
+    background-color: #E3F1CF;
+}
+
+.ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset {
+    float: right;
+
+}
+
+.ui-dialog .ui-dialog-buttonpane button {
+    margin: .5em .4em .5em 0;
+    cursor: pointer;
+
+}
+
+.ui-dialog .ui-resizable-se {
+    width: 12px;
+    height: 12px;
+    right: -5px;
+    bottom: -5px;
+    background-position: 16px 16px;
+
+}
+
+/*.ui-draggable-handle {
+    -ms-touch-action: none;
+    touch-action: none;
+}*/
+
+.ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset .yescls {
+    font-size:15px;
+    color: #FFFFFF;
+    width: 150px;
+    background: #90C93E;
+
+}
+
+.ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset .cancelcls {
+    font-size:15px;
+    color: #FFFFFF;
+    width: 150px;
+    background: #F86379;
+
+}
