--- a/css/Site.css
+++ b/css/Site.css
@@ -458,7 +458,7 @@ label {
         display: inline;
     }
 
-input, textarea {
+/*input, textarea {
     border: 1px solid #e2e2e2;
     background: #fff;
     color: #333;
@@ -466,7 +466,7 @@ input, textarea {
     margin: 5px 0 6px 0;
     padding: 5px;
     width: 300px;
-}
+}*/
 
 textarea {
     font-family: inherit;
