--- a/css/css.css
+++ b/css/css.css
@@ -8221,7 +8221,7 @@ label.checkbox {
     display: inline
 }
 
-input,
+/*input,
 textarea {
     border: 1px solid #e2e2e2;
     background: #fff;
@@ -8230,7 +8230,7 @@ textarea {
     margin: 5px 0 6px 0;
     padding: 5px;
     width: 300px
-}
+}*/
 
 textarea {
     font-family: inherit;
