--- a/css/style.css
+++ b/css/style.css
@@ -176,12 +176,12 @@ li input:checked + ol > li:last-child {
     box-shadow: -1px 4px 17px 3px rgb(160, 164, 165);
 }
 
-.draggable:hover {
+.draggable:hover, .droppable:hover {
     cursor: pointer;
     /*font-weight: bold;*/
     background-color: rgba(201, 243, 227, 0.9);
     /*box-shadow: -1px 4px 17px 3px rgb(160, 164, 165);*/
-    border: 1px solid #CCC;
+    outline: 1px solid #CCC;
 }
 
 .context_pick {
@@ -544,3 +544,45 @@ input, textarea {
 }
 
 /*<--- Дополнтиельные темы для оповещений*/
+
+
+/*Для быстрого поиска*/
+.fastSearch{
+    position:relative;
+}
+
+.search_result_staff, .search_result_staff_position{
+    font-size:80%;
+    background: #FFF;
+    border: 1px #ccc solid;
+    width: 300px;
+    padding: 0;
+    display:none;
+    position: absolute;
+    margin: -6px 0 0;
+    box-shadow: 2px 3px 4px -1px rgb(160 164 165);
+    z-index: 999;
+}
+
+.search_result_staff li, .search_result_staff_position li{
+    list-style: none;
+    padding: 5px 10px;
+    /* margin: 0 0 0 -40px;*/
+    margin: 0;
+    color: #0896D3;
+    border-bottom: 1px #ccc solid;
+    cursor: pointer;
+    transition:0.1s;
+}
+
+.search_result_staff li:hover, .search_result_staff_position li:hover{
+    /* background: #F9FF00;*/
+    color: grey;
+    background: rgba(144,247,95, 0.5);
+    background: -moz-linear-gradient(-45deg, rgba(144,247,95, 1) 0%, rgba(55,215,119, 0.7) 33%, rgba(144,247,95, 0.4) 71%, rgba(255,255,255, 0.5) 91%);
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(144,247,95, 0.4)), color-stop(33%,rgba(55,215,119, 0.7)), color-stop(71%,rgba(144,247,95, 0.6)), color-stop(91%,rgba(255,255,255, 0.5)));
+    background: -webkit-linear-gradient(-45deg, rgba(144,247,95, 1) 0%,rgba(55,215,119, 0.7) 33%,rgba(144,247,95, 0.4) 71%,rgba(255,255,255, 0.5) 91%);
+    background: -o-linear-gradient(-45deg, rgba(144,247,95, 1) 0%,rgba(55,215,119, 0.7) 33%,rgba(144,247,95, 0.4) 71%,rgba(255,255,255, 0.5) 91%);
+    background: -ms-linear-gradient(-45deg, rgba(144,247,95, 1) 0%,rgba(55,215,119, 0.7) 33%,rgba(144,247,95, 0.4) 71%,rgba(255,255,255, 0.5) 91%);
+    background: linear-gradient(135deg, rgba(144,247,95, 1) 0%,rgba(55,215,119, 0.7) 33%,rgba(144,247,95, 0.4) 71%,rgba(255,255,255, 0.5) 91%);
+}
